Add rainbow mode

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <button class="gridSize">Change grid size</button>
         <button class="clear">Clear</button>
+        <input type="checkbox" class="rainbow">Rainbow Mode</button>
         <div class="gridSlide">
             <div class="slide">
                 <div class="gridCurrent"></div>
