Add shading tool

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         <button class="gridSize">Change grid size</button>
         <button class="clear">Clear</button>
-        <input type="checkbox" class="rainbow">Rainbow Mode</button>
+        <input type="checkbox" class="rainbow">Rainbow Mode</input>
+        <input type="checkbox" class="shading">Shading</input>
         <div class="gridSlide">
             <div class="slide">
                 <div class="gridCurrent"></div>
