Re-add eraser, fix shading tool

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="clear">Clear</button>
         <input type="checkbox" class="rainbow">Rainbow Mode</input>
         <input type="checkbox" class="shading">Shading</input>
+        <input type="checkbox" class="eraser">Eraser</input>
         <div class="gridSlide">
             <div class="slide">
                 <div class="gridCurrent"></div>
